--- a/myapp/src/counter/counter.scss
+++ b/myapp/src/counter/counter.scss
@@ -1,6 +1,7 @@
-
+.text-center{
+  text-align: center;
+}
 .counter-wrapper {
-  min-height: 100vh;
   display: flex;
   align-items: center;
   justify-content: center;
